<resources>
    <string name="app_name">Messenger</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="_1">1</string>
    <string name="button">Button</string>
    <string name="_2">2</string>
    <string name="i_already_have_an_account">I already have an account!</string>
    <string name="register_button">Register</string>
    <string name="login">Log In</string>
    <string name="donthaveanaccount">I don\'t have an account yet</string>
    <string name="register">Sign Up</string>
    <string name="TagRegister">RegisterActivity</string>
    <string name="loginTag">LoginActivity</string>
    <string name="new_message">New Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name_select_user">Username</string>
    <string name="TagNewMessageActivity">NewMessageActivity</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="send">Send</string>
    <string name="textleft">textleft</string>
    <string name="textright">textright</string>
    <string name="testtext">testtext</string>
    <string name="message_to">testtext</string>
    <string name="teststring2">teststring2</string>
    <string name="chat_activity">ChatActivity</string>
    <string name="username_chat">username</string>
</resources>